--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.hikari.validation-timeout=${DB_VALIDATION_TIMEOUT:5000}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 
